[package]
name = "rogue-rs"
version = "0.1.0"
authors = ["yshir <yshir0020@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.3.9"
tcod = { git = "https://github.com/tomassedovic/tcod-rs", features = ["serialization"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
